--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Neé</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_artist">ArtistActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
