--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="title_activity_artist">ArtistActivity</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_now_playing">NowPlayingActivity</string>
+    <string name="title_activity_now_playing">Now playing</string>
 </resources>
