--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
     <string name="app_name">Neé</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_artist">ArtistActivity</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_now_playing">Now playing</string>
+    <string name="last_fm_auth_error">Authentication error. Please try again.</string>
+    <string name="last_fm_auth_success">Authentication succeeded</string>
 </resources>
