Add UI for signing in/out and scrobbling option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="scrobble_error">Scrobbling error</string>
     <string name="scrobble_success">\"%1$s\" scrobbled</string>
     <string name="audio_focus_request_error">Audio focus request failed</string>
+
+    <string name="scrobbling">Scrobbling</string>
+    <string name="sign_in">Sign in to Last.fm</string>
+    <string name="sign_out">Sign out</string>
 </resources>
