--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sign_out">Sign out</string>
 
     <string name="now_playing">Now playing</string>
+    <string name="music_notification_channel_description">Music controls</string>
 </resources>
